--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
+    <!-- This element sets the character set your document should use to UTF-8 
+            which includes most characters from the vast
+            majority of written languages. -->
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Introduccion a HTML y CSS</title>
+    <meta name="viewport" content="width=device-width">
+    <!--  -->
     <link rel="stylesheet" href="index.css">
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
+    <!--  -->
+    <title>Introduccion a HTML y CSS</title>
 </head>
 
 <body>
 
-    <header>
+    <header id="top">
         <h1>Introducción a HTML y CSS</h1>
     </header>
 
@@ -22,28 +27,13 @@
             <ul>
                 <li><a href="#que-es-y-como-funciona">¿Qué es y cómo funciona?</a></li>
                 <li><a href="#elementos-etiquetas-y-atributos">Elementos, etiquetas y atributos</a></li>
-                <li>Estructura básica HTML (doctype, head, body).</li>
+                <li><a href="#estructura-basica">Estructura básica HTML (doctype, head, body).</a></li>
             </ul>
             <li><a href="#texto-y-encabezados">Texto y encabezados</a></li>
-            <ul>
-                <li>Headings (h1-h6)</li>
-                <li>Parrafos y saltos de linea</li>
-            </ul>
             <li><a href="#listas">Listas</a></li>
-            <ul>
-                <li>Listas ordenadas</li>
-                <li>Listas no-ordenadas</li>
-            </ul>
             <li><a href="#imagenes">Imagenes</a></li>
-            <ul>
-                <li>Añadir imagenes a una página</li>
-            </ul>
-            <li><a href="#enlances">Enlaces (links)</a></li>
-            <ul>
-                <li>Enlaces internos</li>
-                <li>Enlaces externos</li>
-            </ul>
-            <li><a href="introduccion-a-css">Introduccion a CSS</a></li>
+            <li><a href="#enlaces">Enlaces (links)</a></li>
+            <li><a href="#introduccion-a-css">Introduccion a CSS</a></li>
             <ul>
                 <li>¿Qué es y cómo funciona?</li>
                 <li>Vinculando el CSS con el HTML</li>
@@ -117,19 +107,209 @@
             destino del enlace. El elemento <code>&lt;img&gt;</code> tiene un atributo llamado <code>src</code>
             que se utiliza para indicar la ruta de la imagen que se va a mostrar.
         </p>
+        <p>Los atributos que establecen un valor siempre deben tener:</p>
+        <ul>
+            <li>Un espacio entre ellos y el nombre del elemento (o entre el atributo previo si tiene uno o más
+                atributos).</li>
+            <li>Un signo igual (=).</li>
+            <li>El valor del atributo entre comillas dobles.</li>
+        </ul>
+        <h3 id="estructura-basica">Estructura básica HTML (doctype, head, body..).</h3>
+        <p>
+            Cada documento HTML debe comenzar con el <a href="https://developer.mozilla.org/en-US/docs/Glossary/Doctype"
+                target="_blank"><strong>doctype</strong></a>, que es una declaración que indica al navegador que
+            tipo de documento HTML se está utilizando. El doctype más utilizado es el HTML5, que se escribe así:
+            <code>&lt;!DOCTYPE html&gt;</code>. La etiqueta <strong>doctype</strong> nos permite asegurarnos de que el
+            navegador va a interpretar el documento HTML correctamente.
+        </p>
+        <p>
+            El documento HTML debe contener un elemento <a
+                href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/html">&lt;html&gt;</a>.
+            Este elemento envuelve todo el
+            contenido de la página y es conocido como el elemento raíz. Este elemento también tiene atributos, siendo el
+            más común el atributo <code>lang</code>, que nos permite especificar el lenguaje principal de nuestro
+            documento.
+        </p>
+        <p>
+            Dentro del elemento <code>&lt;html&gt;</code> tendremos dos etiquetas principales: <code>&lt;head&gt;</code>
+            y
+            <code>&lt;body&gt;</code>. La etiqueta <code>&lt;head&gt;</code> contiene información sobre el
+            documento, como el título de la página, los estilos, los scripts, etc. La etiqueta <code>&lt;body&gt;</code>
+            contiene el contenido de la página.
+        </p>
+        <p>
+            El documento HTML debe contener un elemento <code>&lt;title&gt;</code> dentro de la etiqueta
+            <code>&lt;head&gt;</code>. El elemento <code>&lt;title&gt;</code> es el título de la página y se
+            muestra en la pestaña del navegador.
+        </p>
+        <p>Otro elemento importante que se encuentran dentro del elemento <code>&lt;head&gt;</code> es el elemento
+            <code>&lt;meta&gt;</code> que con ciertos atributos nos proporciona utilidades esenciales para cualquier
+            pagina web. Por ejemplo, el elemento <code>&lt;meta charset="utf-8"&gt;</code> le dice al navegador que debe
+            usar el <a href="https://es.wikipedia.org/wiki/UTF-8">formato de codificación UTF-8</a>, el cual incluye los
+            caracteres para la mayoría de lenguajes escritos,
+            para representar el texto en nuestro documento. De la misma forma el elemento
+            <code>&lt;meta name="viewport" content="width=device-width"&gt;</code> nos permite asegurarnos de que la
+            página se renderizará como máximo en el ancho de la pantalla del dispositivo en donde se esta visualizando.
+        </p>
+
+
     </section>
     <section id="texto-y-encabezados">
         <h2>Texto y encabezados</h2>
+
+        <p>
+            Los elementos <code>&lt;h1&gt;</code> a <code>&lt;h6&gt;</code> se utilizan para definir los encabezados de
+            la página. El elemento <code>&lt;h1&gt;</code> es el encabezado principal y el elemento
+            <code>&lt;h6&gt;</code> es el encabezado de menor nivel. Los encabezados son importantes para la
+            estructura de la página y para la accesibilidad.
+        </p>
+        <p>
+            Los elementos <code>&lt;p&gt;</code> se utilizan para definir párrafos de texto. Los párrafos son
+            elementos de bloque, lo que significa que siempre comienzan en una nueva línea y ocupan todo el ancho
+            disponible.
+        </p>
+
+        <p>
+            Los elementos <code>&lt;span&gt;</code> <span>se utilizan para definir secciones de texto</span>. Los
+            elementos
+            <code>&lt;span&gt;</code> son elementos de línea, lo que significa que no comienzan en una nueva línea y
+            solo ocupan el ancho necesario.
+        </p>
+
+        <p>
+            Los elementos <code>&lt;strong&gt;</code> y <code>&lt;em&gt;</code> <strong>se utilizan para resaltar
+                texto</strong>.
+            El elemento <code>&lt;strong&gt;</code> indica que el texto es importante, mientras que el elemento
+            <code>&lt;em&gt;</code> indica que el texto es enfatizado.
+        </p>
+
+        <p>
+            Los elementos <code>&lt;small&gt;</code> se utilizan para <small>definir texto
+                pequeño</small>.
+        </p>
+
+        <p>
+            Los elementos <code>&lt;sub&gt;</code> y <code>&lt;sup&gt;</code> se utilizan para definir texto
+            subíndice (H<sub>2</sub>0) y texto superíndice (2<sup>256</sup>), respectivamente.
+        </p>
+
+        <p>
+            Los elementos <code>&lt;blockquote&gt;</code> y <code>&lt;q&gt;</code> se utilizan para definir
+            bloques de citas y citas cortas, respectivamente. Por ejemplo:
+
+        <blockquote>
+            "La unica forma de aprender un nuevo lenguaje de programación es escribiendo programas en él" - Dennis
+            Ritchie
+        </blockquote>
+        </p>
+
+        <p>
+            Los elementos <code>&lt;abbr&gt;</code> y <code>&lt;acronym&gt;</code> se utilizan para definir
+            <abbr title="Abreviaturas">abbrs</abbr> y acrónimos (<acronym
+                title="HyperText Markup Languaje">HTML</acronym>), respectivamente.
+        </p>
+
+        <p>
+            Los elementos <code>&lt;del&gt;</code> y <code>&lt;ins&gt;</code> se utilizan para definir texto
+            <del>eliminado</del> y texto <ins>insertado</ins>, respectivamente.
+        </p>
+
+        <p>
+            Los elementos <code>&lt;pre&gt;</code> se utiliza para definir texto preformateado. Por ejemplo:
+
+        <pre>
+fn main() {
+    let mut count = 0u32;
+
+    println!("Let's count until infinity!");
+
+    // Infinite loop
+    loop {
+        count += 1;
+
+        if count == 3 {
+            println!("three");
+
+            // Skip the rest of this iteration
+            continue;
+        }
+
+        println!("{}", count);
+
+        if count == 5 {
+            println!("OK, that's enough");
+
+            // Exit this loop
+            break;
+        }
+    }
+}
+        </pre>
+        </p>
+
+        <p>
+            Los elementos <code>&lt;code&gt;</code> se utiliza para definir texto de código.
+        </p>
+
     </section>
+
     <section id="listas">
         <h2>Listas</h2>
+
+        <p>
+            Los elementos <code>&lt;ul&gt;</code> y <code>&lt;ol&gt;</code> se utilizan para definir listas
+            desordenadas y ordenadas, respectivamente. Los elementos <code>&lt;li&gt;</code> se utilizan para
+            definir los elementos de la lista.
+        </p>
+
+        <p>
+            Los elementos <code>&lt;dl&gt;</code>, <code>&lt;dt&gt;</code> y <code>&lt;dd&gt;</code> se utilizan
+            para definir listas de definiciones. El elemento <code>&lt;dt&gt;</code> se utiliza para definir el
+            término de la definición, mientras que el elemento <code>&lt;dd&gt;</code> se utiliza para definir la
+            definición.
+        </p>
+
+        <p>
+            Los elementos <code>&lt;ul&gt;</code> y <code>&lt;ol&gt;</code> pueden tener atributos <code>type</code>
+            y <code>start</code> para definir el tipo de marcador y el número de inicio, respectivamente.
+        </p>
     </section>
+
     <section id="imagenes">
         <h2>Imagenes</h2>
+
+        <p>
+            Los elementos <code>&lt;img&gt;</code> se utilizan para definir imágenes. El elemento
+            <code>&lt;img&gt;</code>
+            tiene un atributo <code>src</code> que define la ruta de la imagen y un atributo <code>alt</code> en el que
+            se define un texto alternativo para mostrar cuando no es posble mostrar la imagen o para permitir a los
+            usuarios no pueden ver conocer el contenido de la imagen (los lectores de pantalla leen el texto en el
+            atributo <code>alt</code>).
+        </p>
+
+        <pre
+            id="img-example">&lt;<green>img</green> <red>src</red>=<green>"path/to/image"</green> <red>alt</red>=<green>"Texto alternativo"</green>&gt;</pre>
+
     </section>
+
     <section id="enlaces">
         <h2>Enlaces (links)</h2>
+
+        <p>
+            Los elementos <code>&lt;a&gt;</code> se utilizan para definir enlaces. El elemento <code>&lt;a&gt;</code>
+            tiene un atributo <code>href</code> que define la ruta del enlace y un atributo <code>target</code> que
+            define donde se abrirá el enlace. El atributo <code>target</code> puede tener los valores
+            <code>_blank</code>
+            (para abrir el enlace en una nueva pestaña) o <code>_self</code> (para abrir el enlace en la misma
+            pestaña).
+        </p>
+
+        <p>
+            También se pueden crear enlances internos, es decir, que apuntan al contenido dentro de la misma página.
+        </p>
+
     </section>
+
     <section id="introduccion-a-css">
         <h2>Introduccion a CSS</h2>
     </section>
@@ -141,10 +321,54 @@
     </section>
     <section id="buenas-practicas">
         <h2>Buenas prácticas</h2>
+
+        <h3>Buenas prácticas para HTML:</h3>
+        <ul>
+            <li>Utiliza etiquetas HTML semánticas para describir el contenido de tu página, en lugar de utilizar
+                etiquetas solo
+                para fines de formateo. Por ejemplo, utiliza <code>&lt;h1&gt;</code> para encabezados y
+                <code>&lt;p&gt;</code>
+                para párrafos, en lugar de utilizar etiquetas <code>&lt;font&gt;</code> o <code>&lt;div&gt;</code>.
+            </li>
+            <li>Utiliza etiquetas y nombres de atributos en minúsculas.</li>
+            <li>Utiliza comillas alrededor de los valores de atributo.</li>
+            <li>Utiliza un elemento <code>&lt;label&gt;</code> para cada control de formulario.</li>
+            <li>Utiliza texto alternativo para las imágenes.</li>
+            <li>Utiliza elementos estructurales de HTML5 (por ejemplo, <code>&lt;header&gt;</code>,
+                <code>&lt;footer&gt;</code>,
+                <code>&lt;nav&gt;</code>, etc.) para organizar tu contenido.
+            </li>
+        </ul>
+
+        <h3>Buenas prácticas para CSS:</h3>
+        <ul>
+            <li>Utiliza un estilo consistente en todo tu sitio web.</li>
+            <li>Utiliza un archivo CSS separado para los estilos, en lugar de utilizar estilos inline.</li>
+            <li>Utiliza una hoja de estilos de reset o normalize para garantizar estilos consistentes en diferentes
+                navegadores.
+            </li>
+            <li>Utiliza nombres de clase semánticos que describan el propósito del elemento, en lugar de utilizar
+                nombres de
+                clase presentacionales.</li>
+            <li>Utiliza los selectores más cortos y eficientes posibles.</li>
+            <li>Utiliza el selector menos específico necesario para dar estilo a un elemento.</li>
+            <li>Utiliza la cascada a tu favor, en lugar de luchar en contra de ella.</li>
+            <li>Utiliza técnicas de diseño responsive basadas en móviles.</li>
+        </ul>
+
+
+
     </section>
     <section id="lecturas-adicionales">
         <h2>Lecturas adicionales</h2>
+        <ul>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Link_types">Link types</a></li>
+            <li><a href="https://www.w3schools.com/HTML/html_lists.asp">HTML lists</a></li>
+            <li><a href="https://www.geeksforgeeks.org/html-tags-a-to-z-list/">HTML tags A-to-Z list</a></li>
+        </ul>
     </section>
+
+    <div><a href="#top">⬆️</a></div>
 
 </body>
 
